Food and Cloths Bank Program

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
                     <div class="col-lg-8 col-sm-8 col-xs-12 lh">
                         <p>
-                            <a href="https://doublethedonation.com/api/iframe/NDc4NDJkNmYtY2U0" >Click here
+                            <a href="food-and-cloths-bank.html" >Click here
                               to see how we are helping during COVID-19. </a>
                         </p>
                     </div>
@@ -176,7 +176,7 @@
             <div class="row">
                 <div class="col-md-6 col-sm-6 col-xs-12">
                     <div>
-                        <p><img src="assets/images/Don-Beto-570x540.png" alt="Don-Beto"></p>
+                        <p><img src="assets/images/Don-Beto2-570x540.png" alt="Don-Beto"></p>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-6 col-xs-12">
@@ -196,7 +196,7 @@
                         </p>
 
                         <div class="buttons">
-                            <a href="contact.html" class=" red-btn red-btn-1">Read his story -></a>
+                            <a href="food-and-cloths-bank.html" class=" red-btn red-btn-1">Read his story -></a>
                         </div>
                     </div>
 
@@ -322,8 +322,9 @@
                     <div class="text-center">
                         <h2 class="title-text">Create Your Fundraising Project </h2>
                         <div class="wave-line wave-center"></div>
-                        <p class="paragraph-white">Fundraising event ideas are a way any person can impact others people life.
-                        No body can change everythin in the world, but we can all make it better. Let's get to work. Voluteer today! </p>
+                        <p class="paragraph-white">Fundraising event ideas are a way any person can
+                          impact others people's life. Nobody can change everything in the world, but
+                          we all can make it better. Let's get to work. Volunteer today! </p>
                     </div>
                 </div>
             </div>
