--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                                         <li ><a href="shop-product.html">SHOP PRODUCT</a></li>
                                     </ul>
                                 </li> -->
-                                <li class="last"><a href="contact.html" class="contact" title="Contact">CONTACT</a></li>
+                                <li class="last"><a href="contact.html" class="contact" title="Contact">CONTACT US</a></li>
                                 <li class="last"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url"
                                   class="contact" title="Contact">DONATE</a></li>
                             </ul>
@@ -251,9 +251,9 @@
                             </a>
                         </div>
                         <div class="person-content">
-                            <h3><a href="our-causes.html" class="title-white">Education to Every Child</a></h3>
-                            <p>Give them a book and they will touch a star. They are kids full of life,
-                            they only need an opportunity to study to change their world.</p>
+                            <h3><a href="our-causes.html" class="title-white">Food & Cloths Bank</a></h3>
+                            <p>The program's main beneficiaries are the most vulnerable people from all the
+                              American Continent living in poverty, and in desperate need of these basic services.</p>
                         </div>
                     </div>
 
