Links Update in Index, Our Causes Added Giving Tue

--- a/our-causes.html
+++ b/our-causes.html
@@ -51,10 +51,10 @@
     <div class="main-causes">
         <div class="container">
 
-            <div class="row mb-causes mb-causes-top">
+            <div class="row mb-causes mb-causes-top" id="food-cloths-program">
                 <div class="col-md-6 col-sm-12 col-xs-12 center-causes">
                     <div class="person-img">
-                        <a href="single-causes.html" class="img-link">
+                        <a href="#food-cloths-program" class="img-link">
                             <span><i class="icon-eye" aria-hidden="true"></i></span>
                             <img src="assets/images/Don-Beto2-570x360.png" alt="Don Beto">
                         </a>
@@ -63,7 +63,8 @@
                 <div class="col-md-6 col-sm-12 col-xs-12 ">
                     <div class="person-card ">
                         <div class="person-content">
-                            <h3><a href="single-causes.html" class="title-white">Food & Cloths Bank Program</a></h3>
+                            <h3><a href="#food-cloths-program"
+                              class="title-white">Food & Cloths Bank Program</a></h3>
                             <p>The Food and Cloths Bank Program's main beneficiaries are the most vulnerable
                               people from all the American Continent living in poverty, and in desperate
                               need of these basic services. Unfortunately, poverty and extreme poverty
@@ -80,10 +81,10 @@
                 </div>
             </div> <!--  /.row mb-causes mb-causes-top -->
 
-            <div class="row mb-causes">
+            <div class="row mb-causes" id="covid-19-protection">
                 <div class="col-md-6 col-sm-12 col-xs-12 center-causes">
                     <div class="person-img">
-                        <a href="single-causes.html" class="img-link">
+                        <a href="#covid-19-protection" class="img-link">
                             <span><i class="icon-eye" aria-hidden="true"></i></span>
                             <img src="assets/images/covid-19-570x360.png" alt="causes2">
                         </a>
@@ -92,19 +93,21 @@
                 <div class="col-md-6 col-sm-12 col-xs-12 ">
                     <div class="person-card ">
                         <div class="person-content">
-                            <h3><a href="single-causes.html" class="title-white">Provide COVID-19 Protection</a></h3>
+                            <h3><a href="#covid-19-protection"
+                              class="title-white">Provide COVID-19 Protection</a></h3>
                             <p>Those infected by the Coronavirus need help from qualified medical
                               personnel in order to survive. However, qualified medical personnel
                               need high-class protective gear in order to help them. There is a
                               severe lack of protective gear, especially masks, and medical personnel
                               all around the world are being forced to improvise, putting their own
                               safety on the line in the process, so that they can continue to help
-                              the infected. DEIGEX INC. is raising funds to buy masks and other
+                              the infected.  </p>
+                              <p>DEIGEX is raising funds to buy masks and other
                               desperately needed protective gear, which will then be given to doctors
                               and nurses in Coronavirus fighting hospitals from Mexico, Guatemala,
                               Honduras, and El Salvador. The goal is $100,000, and if we fulfill this,
                               thousands of lives could be saved. Can you help us to provide support to
-                              those facing the worst that Coronavirus has to offer every single day? </p>
+                              those facing the worst that Coronavirus has to offer every single day?</p>
                         </div>
                     </div>
 
@@ -114,10 +117,10 @@
                 </div>
             </div> <!--  /.row mb-causes -->
 
-            <div class="row mb-causes">
+            <div class="row mb-causes" id="fair-trade">
                 <div class="col-md-6 col-sm-12 col-xs-12 center-causes">
                     <div class="person-img">
-                        <a href="single-causes.html" class="img-link">
+                        <a href="#fair-trade" class="img-link">
                             <span><i class="icon-eye" aria-hidden="true"></i></span>
                             <img src="assets/images/fair-trade-570x360.png" alt="causes3">
                         </a>
@@ -126,10 +129,15 @@
                 <div class="col-md-6 col-sm-12 col-xs-12 ">
                     <div class="person-card ">
                         <div class="person-content">
-                            <h3><a href="single-causes.html" class="title-white">Fair Trade Project</a></h3>
+                            <h3><a href="#fair-trade" class="title-white">Fair Trade Project</a></h3>
                             <p>They have art, passion, and hard work on their hands. We are here to
                               open doors to help them thrive in their small entrepreneurships to help
                               them become sosteinable in time. </p>
+                            <p>This project will enhance micro entrepreneurs to colocate their products
+                              in the US & Canada market. The project will give assistance with business
+                              education, web design, online marketing, product transportation and warehousing.
+                              When you donate to this project you are helping create wealth and economy
+                              in their home countries.</p>
                         </div>
                     </div>
 
@@ -139,121 +147,35 @@
                 </div>
             </div> <!--  /.row mb-causes -->
 
-            <div class="row mb-causes">
+            <div class="row mb-causes" id="giving-tuesday">
                 <div class="col-md-6 col-sm-12 col-xs-12 center-causes">
                     <div class="person-img">
-                        <a href="single-causes.html" class="img-link">
+                        <a href="#giving-tuesday" class="img-link">
                             <span><i class="icon-eye" aria-hidden="true"></i></span>
-                            <img src="http://via.placeholder.com/570x360" alt="causes4">
+                            <img src="assets/images/giving-tuesday-570x360.png" alt="causes4">
                         </a>
                     </div>
                 </div>
                 <div class="col-md-6 col-sm-12 col-xs-12 ">
                     <div class="person-card ">
                         <div class="person-content">
-                            <h3><a href="single-causes.html" class="title-white">Save the Children</a></h3>
-                            <p>They have art, passion, and hard work on their hands. We are here to
-                              open doors to help them thrive in their small entrepreneurships to help
-                              them become sosteinable in time. </p>
+                            <h3><a href="#giving-tuesday" class="title-white">Giving Tuesday Now</a></h3>
+                            <p>Giving Tuesday Now is a global generosity movement to unleash
+                              the power of people and organizations to transform their
+                              communities and the world by doing good. This movement is inspirng
+                              millions of people to give, collaborate, and celebrate generosity. </p>
                         </div>
                     </div>
-                    <div class="scale-area">
-                        <h6>Raised</h6>
-                        <h6 class="pull-right">Goal</h6>
-                        <div class="scale clearfix">
-                            <div class="scale-bar-1" data-percent="48"></div>
-                            <div class="scale-bar-percent">48%</div>
-                        </div>
-                        <h6>5730.00 USD</h6>
-                        <h6 class="pull-right">112000.00 USD</h6>
-                    </div>
+
                     <div class="buttons">
                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url" class=" red-btn red-btn-4">Donate</a>
                     </div>
                 </div>
             </div> <!--  /.row mb-causes -->
 
-            <div class="row mb-causes">
-                <div class="col-md-6 col-sm-12 col-xs-12 center-causes">
-                    <div class="person-img">
-                        <a href="single-causes.html" class="img-link">
-                            <span><i class="icon-eye" aria-hidden="true"></i></span>
-                            <img src="http://via.placeholder.com/570x360" alt="causes5">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-12 col-xs-12 ">
-                    <div class="person-card ">
-                        <div class="person-content">
-                            <h3><a href="single-causes.html" class="title-white">Action Against Hunger-USA</a></h3>
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                                officia deserunt mollit anim id est laborum. Sed ut perspiciatis
-                                unde omnis iste natus error sit vo- luptatem accusantium doloremque
-                                laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                                veritatis et quasi architecto. </p>
-                        </div>
-                    </div>
-                    <div class="scale-area">
-                        <h6>Raised</h6>
-                        <h6 class="pull-right">Goal</h6>
-                        <div class="scale clearfix">
-                            <div class="scale-bar-1" data-percent="62"></div>
-                            <div class="scale-bar-percent">62%</div>
-                        </div>
-                        <h6>5730.00 USD</h6>
-                        <h6 class="pull-right">112000.00 USD</h6>
-                    </div>
-                    <div class="buttons">
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url" class=" red-btn red-btn-4">Donate</a>
-                    </div>
-                </div>
-            </div> <!--  /.row mb-causes -->
-
-            <div class="row mb-causes mb-causes-bottom">
-                <div class="col-md-6 col-sm-12 col-xs-12 center-causes">
-                    <div class="person-img">
-                        <a href="single-causes.html" class="img-link">
-                            <span><i class="icon-eye" aria-hidden="true"></i></span>
-                            <img src="http://via.placeholder.com/570x360" alt="causes6">
-                        </a>
-                    </div>
-                </div>
-                <div class="col-md-6 col-sm-12 col-xs-12 ">
-                    <div class="person-card ">
-                        <div class="person-content">
-                            <h3><a href="single-causes.html" class="title-white">Food for the Hungry </a></h3>
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-                                officia deserunt mollit anim id est laborum. Sed ut perspiciatis
-                                unde omnis iste natus error sit vo- luptatem accusantium doloremque
-                                laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
-                                veritatis et quasi architecto. </p>
-                        </div>
-                    </div>
-                    <div class="scale-area">
-                        <h6>Raised</h6>
-                        <h6 class="pull-right">Goal</h6>
-                        <div class="scale clearfix">
-                            <div class="scale-bar-1 " data-percent="72"></div>
-                            <div class="scale-bar-percent">72%</div>
-                        </div>
-                        <h6>5730.00 USD</h6>
-                        <h6 class="pull-right">112000.00 USD</h6>
-                    </div>
-                    <div class="buttons">
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=KYC8EQMRQY9VJ&source=url" class=" red-btn red-btn-4">Donate</a>
-                    </div>
-                </div>
-            </div> <!--  /.row mb-causes mb-causes-bottom -->
 
             <!--======================= Pagination ========================-->
-            <nav class="pagination-1">
-                <ul>
-                    <li class="active"><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#"><i class="icon-right-open-mini" aria-hidden="true"></i></a></li>
-                </ul>
-            </nav> <!-- /.Pagination -->
+
         </div> <!--  /.container -->
     </div> <!--  /.main-causes -->
 
